--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     # ボリュームを指定
     # ローカルのカレントディレクトリをコンテナの/codeにマウントする
     volumes:
-      - ./ChatApp:/code
+      - ./SHABERIBA:/code
     # ローカルのFlaskポートとコンテナの5000番ポートをつなぐ
     ports:
       - "${FLASK_PORT}:5000"
